--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -24,34 +24,34 @@ import type { Sponsor } from '../components/sponsors/SponsorGrid.astro';
 // Definición de patrocinadores
 const sponsors: Sponsor[] = [
   {
-    name: 'Ayuntamiento de Villamanin',
+    name: 'Ayuntamiento de Villamanín',
     logo: '/images/sponsors/villamanin.jpg',
-    url: '#',
+    url: 'https://www.aytovillamanin.es/',
   },
   {
     name: 'Diputación de León',
     logo: '/images/sponsors/dipu.jpg',
-    url: '#',
+    url: 'https://www.dipuleon.es/',
   },
   {
-    name: 'federacion montaña CyL',
+    name: 'Federación de Montaña CyL',
     logo: '/images/sponsors/federacion.jpg',
-    url: '#',
+    url: 'https://www.fclm.com/',
   },
   {
-    name: 'Ezequiel',
+    name: 'Embutidos Ezequiel',
     logo: '/images/sponsors/ezequiel.jpg',
-    url: '#',
+    url: 'https://www.embutidosezequiel.com/?srsltid=AfmBOorSUk5F-bLbms_pT8TVWNKmZzEK4__L4aWE90COOiB122j-hqNh',
   },
   {
-    name: 'RBH',
+    name: 'RBH Global',
     logo: '/images/sponsors/rbh.png',
-    url: '#',
+    url: 'https://rbhglobal.com/',
   },
   {
     name: 'Huevos Leon',
     logo: '/images/sponsors/huevos.png',
-    url: '#',
+    url: 'https://www.huevosleon.es/',
   },
   {
     name: 'Casa Rural Valle de Arbas',
@@ -61,113 +61,113 @@ const sponsors: Sponsor[] = [
   {
     name: 'Instituto Leonés de la Cultura',
     logo: '/images/sponsors/cultura.png',
-    url: '#',
+    url: 'https://www.institutoleonesdecultura.es/',
   },
   {
     name: 'Reserva de la Biosfera del Alto Bernesga',
     logo: '/images/sponsors/biosfera.png',
-    url: '#',
+    url: 'https://altobernesgabiosfera.es/',
   },
   {
     name: 'Balneario de Caldas de Luna',
     logo: '/images/sponsors/balneario.png',
-    url: '#',
+    url: 'https://www.balneariocaldasdeluna.com/es/',
   },
   {
-    name: 'Restaurante y fabrica embutido Entrepeñas',
+    name: 'Restaurante y Fábrica embutido Entrepeñas',
     logo: '/images/sponsors/entrepenas.png',
-    url: '#',
+    url: 'https://www.embutidosentrepenas.es/',
   },
   {
-    name: 'Embitidos la pradera de Fontun',
+    name: 'Embutidos la pradera de Fontún',
     logo: '/images/sponsors/fontun.jpg',
-    url: '#',
+    url: 'https://embutidoslapradera.com/?srsltid=AfmBOoqRnx5IHYbS7mg2EKItwF5zLFKruYdusAPtskyfYhyHvG-plv6d',
   },
   
   {
-    name: 'Super de Villamanin',
+    name: 'Super de Villamanín',
     logo: '/images/sponsors/super.jpg',
-    url: '#',
+    url: 'https://www.facebook.com/p/El-Super-De-Villamanin-100057493006622/?locale=es_ES',
   },
   {
     name: 'Hotel Rio Viejo',
     logo: '/images/sponsors/hotelrv.jpg',
-    url: '#',
+    url: 'https://rio-viejo.co/',
   },
     {
     name: 'Camping Valle de Arbas',
     logo: '/images/sponsors/camping.jpg',
-    url: '#',
+    url: 'https://www.facebook.com/p/Camping-Valle-de-Arbas-100085132209798/',
   },
 {
     name: 'Embrujo',
     logo: '/images/sponsors/embrujo.png',
-    url: '#',
+    url: 'http://www.posadaelembrujo.es/',
   },
   {
     name: 'Hotel Golpejar',
     logo: '/images/sponsors/golpejar.jpg',
-    url: '#',
+    url: 'https://www.facebook.com/people/Hostal-Restaurante-Golpejar/100054263030206/?locale=es_LA#',
   },
   {
     name: 'Casa rural Terraza del Valle',
     logo: '/images/sponsors/terraza.jpg',
-    url: '#',
+    url: 'https://www.laterrazadelvalle.com/',
   },
   {
-    name: 'Hotel Rural Dias de Luna',
+    name: 'Hotel Rural Días de Luna',
     logo: '/images/sponsors/dias.png',
-    url: '#',
+    url: 'https://www.diasdeluna.com/',
   },
   {
-    name: 'CR Rincón de la Rosa',
+    name: 'Casa Rural Rincón de la Rosa',
     logo: '/images/sponsors/rincon.jpg',
-    url: '#',
+    url: 'https://elrincondelarosa.es/es/',
   },
   {
-    name: 'Hospederia la Bodaguera',
+    name: 'Hospedería la Bogadera',
     logo: '/images/sponsors/bodaguera.png',
-    url: '#',
+    url: 'https://labogadera.com/',
   },
   {
     name: 'Hostal Bicis y Vacas',
     logo: '/images/sponsors/vacas.png',
-    url: '#',
+    url: 'https://bicisyvacas.es/',
   },
   {
     name: 'Hostal Fontañán',
     logo: '/images/sponsors/fontanan.png',
-    url: '#',
+    url: 'https://hostalfontanan.com/',
   },
   {
     name: 'Turismo activo Guheko',
     logo: '/images/sponsors/guheko.png',
-    url: '#',
+    url: 'https://www.guheko.com/index.php/Centro_de_Turismo_activo',
   },
   {
     name: 'Turismo activo Tiki Aventura',
     logo: '/images/sponsors/tiki.png',
-    url: '#',
+    url: 'https://tikiaventura.com/',
   },
   {
     name: 'Turismo activo Naturocio',
     logo: '/images/sponsors/naturocio.jpg',
-    url: '#',
+    url: 'https://www.naturocio.net/',
   },
   {
-    name: 'Dirthy Moustache Bike',
+    name: 'Dirty Moustache Bike',
     logo: '/images/sponsors/bicis.png',
-    url: '#',
+    url: 'https://dirtymoustachebikes.com/',
   },
   {
     name: 'La Despensa de Fer',
     logo: '/images/sponsors/despensa.jpg',
-    url: '#',
+    url: 'https://embutidodeleon.net/',
   },
 {
-    name: 'Carniceria de Nino',
+    name: 'Carnicería de Nino',
     logo: '/images/sponsors/nino.jpg',
-    url: '#',
+    url: 'https://www.facebook.com/p/Carnicer%C3%ADa-Nino-Villaman%C3%ADn-61553038727990/',
   },
 ];
 ---
@@ -270,7 +270,7 @@ const sponsors: Sponsor[] = [
 
         <InfoSection
           title="Inscripción"
-          description="Estate pendiente a las inscriciones, son limitadas. No te quedes sin tu dorsal."
+          description="Estate pendiente a las inscripciones, son limitadas. No te quedes sin tu dorsal."
           cardTitle="Inscríbete"
           cardDescription="Asegura tu plaza en la carrera"
           cardIcon="M8 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4H6Zm7.25-2.095c.478-.86.75-1.85.75-2.905a5.973 5.973 0 0 0-.75-2.906 4 4 0 1 1 0 5.811ZM15.466 20c.34-.588.535-1.271.535-2v-1a5.978 5.978 0 0 0-1.528-4H18a4 4 0 0 1 4 4v1a2 2 0 0 1-2 2h-4.535Z"
@@ -319,7 +319,7 @@ const sponsors: Sponsor[] = [
             contactarnos. Tenemos diferentes opciones de patrocinio adaptadas a tus necesidades.
           </p>
           <a
-            href="/contacto"
+            href="mailto:valledearbas@gmail.com"
             class="btn-animated inline-block px-8 py-3 bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold rounded-lg transition-all hover:shadow-lg hover:-translate-y-1 hover:from-[#e49a69] hover:to-[#f97316]"
           >
             Contacta con nosotros
