--- a/src/pages/normativa.astro
+++ b/src/pages/normativa.astro
@@ -16,7 +16,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       subtitle="La participación en la carrera <strong>Trail Valle de Arbas</strong> implica la aceptación de este reglamento y la ética de la carrera."
     />
 
-    <article class="pt-10 w-[90%] mx-auto max-w-[1200px]">
+    <article class="pt-10 w-[90%] mx-auto max-w-300">
       <h3 class="text-xl font-semibold mt-4 mb-4 lg:mt-8 lg:text-2xl">Requisitos de los participantes</h3>
       
       <ul>
@@ -87,7 +87,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       title="Material obligatorio y seguridad"
       subtitle="Es fundamental llevar el material obligatorio para garantizar la seguridad de todos los participantes."
     />
-    <article id="material-obligatorio" class="pt-10 w-[90%] mx-auto max-w-[1200px]">
+    <article id="material-obligatorio" class="pt-10 w-[90%] mx-auto max-w-300">
       <h3 class="text-xl font-semibold mb-4 lg:text-2xl">Material obligatorio para todas las pruebas</h3>
       <p class="info-text mb-4">
         El siguiente material es obligatorio para todos los participantes en cualquier modalidad del Trail Valle de Arbas. La organización realizará controles aleatorios antes de la salida y durante el recorrido.
@@ -131,7 +131,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       subtitle="Protocolos y procedimientos para garantizar la seguridad de todos los participantes durante la carrera."
     />
     
-    <article id="seguridad" class="pt-10 w-[90%] mx-auto max-w-[1200px] mb-20">
+    <article id="seguridad" class="pt-10 w-[90%] mx-auto max-w-300 mb-20">
       <h3 class="text-xl font-semibold mb-4 lg:text-2xl">Protocolo de seguridad</h3>
       <p class="info-text mb-4">
         La seguridad de los participantes es la prioridad absoluta para la organización del Trail Valle de Arbas. Para ello, se implementan los siguientes protocolos:
