--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -40,13 +40,14 @@ import CallToAction from '../components/CallToAction.astro';
                   <span class="info-tag">A 100m de la salida</span>
                  
                 </div>
-                <div class="mt-3">
-                  <a href="#" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                <div class="mt-3 flex flex-col gap-2">
+                  <a href="tel:629331738" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                     </svg>
                     629331738
-                    <a href="https://tikiaventura.com/albergue-valle-de-arbas/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                  </a>
+                  <a href="https://tikiaventura.com/albergue-valle-de-arbas/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
                     </svg>
@@ -60,20 +61,19 @@ import CallToAction from '../components/CallToAction.astro';
                 <p class="text-sm mb-2">Hotel rural con encanto con habitaciones dobles.</p>
                 <div class="flex flex-wrap gap-3">
                   <span class="info-tag">A 100m de la salida</span>
-                  
                 </div>
-                <div class="mt-3">
-                  <a href="#" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                <div class="mt-3 flex flex-col gap-2">
+                  <a href="tel:616934636" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                     </svg>
                     616934636
-                    <a href="https://rio-viejo.co/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                  </a>
+                  <a href="https://rio-viejo.co/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
                     </svg>
                     Reserva en la web oficial
-                  </a>
                   </a>
                 </div>
               </div>
@@ -84,18 +84,18 @@ import CallToAction from '../components/CallToAction.astro';
                   <span class="info-tag">A 0m de la salida</span>
                   
                 </div>
-                <div class="mt-3">
-                  <a href="#" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                <div class="mt-3 flex flex-col gap-2">
+                  <a href="tel:637540457" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                     </svg>
                     637540457
-                    <a href="https://www.valledearbas.es/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                  </a>
+                  <a href="https://www.valledearbas.es/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
                     </svg>
                     Reserva en la web oficial
-                  </a>
                   </a>
                 </div>
               </div>
@@ -125,18 +125,18 @@ import CallToAction from '../components/CallToAction.astro';
   
                   <span class="info-tag">Restaurante propio</span>
                 </div>
-                <div class="mt-3">
-                  <a href="#" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                <div class="mt-3 flex flex-col gap-2">
+                  <a href="tel:659030282" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                     </svg>
                     659030282
-                    <a href="http://www.posadaelembrujo.es/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                  </a>
+                  <a href="http://www.posadaelembrujo.es/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
                     </svg>
                     Reserva en la web oficial
-                  </a>
                   </a>
                 </div>
               </div>
@@ -149,7 +149,7 @@ import CallToAction from '../components/CallToAction.astro';
                   <span class="info-tag">Bar-restaurante</span>
                 </div>
                 <div class="mt-3">
-                  <a href="#" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                  <a href="tel:670838885" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                     </svg>
@@ -160,16 +160,17 @@ import CallToAction from '../components/CallToAction.astro';
               
               <div class="accommodation-item">
                 <h4 class="font-medium mb-1">Casa Rural la Terraza del Valle</h4>
-                <p class="text-sm mb-2">Casa rurale con capacidad de 2 a 6 personas. </p>
+                <p class="text-sm mb-2">Casa rural con capacidad de 2 a 6 personas. </p>
                 <div class="flex flex-wrap gap-3">
                   <span class="info-tag">A 4km de Cubillas</span>
                 </div>
                 <div class="mt-3">
-                  <a href="#" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center">
+                  <a href="https://www.laterrazadelvalle.com/" class="text-[#f97316] hover:text-[#e49a69] text-sm font-medium flex items-center" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
                     </svg>
-https://www.laterrazadelvalle.com/                  </a>
+                    Visita la web oficial
+                  </a>
                 </div>
               </div>
             </div>
@@ -269,7 +270,7 @@ https://www.laterrazadelvalle.com/                  </a>
               
               <div class="restaurant-item">
                 <h4 class="font-medium mb-1">Embutidos la Pradera de Fontún (Fontún)</h4>
-                <p class="text-sm mb-2">Embutios selectos.</p>
+                <p class="text-sm mb-2">Embutidos selectos.</p>
                 <div class="flex flex-wrap gap-3 mb-2">
                   
                 </div>
@@ -324,7 +325,7 @@ https://www.laterrazadelvalle.com/                  </a>
               
               <div class="activity-item">
                 <h4 class="font-medium mb-2">Rutas en Geras</h4>
-                <p class="text-sm">Recorre los diferentes prutas que ofrece este pueblo y de sus paisajes de  montaña y bosques.</p>
+                <p class="text-sm">Recorre los diferentes rutas que ofrece este pueblo y de sus paisajes de  montaña y bosques.</p>
                 <div class="mt-2 text-xs text-gray-600">
                   <p><strong>Dispones de muchas ruta circular:</strong> como La Boyariza o Alceo</p>
                   <p><strong>Duración aproximada:</strong> 3-4 horas</p>
@@ -334,7 +335,7 @@ https://www.laterrazadelvalle.com/                  </a>
             
             <!-- Cultura -->
             <div class="activity-section">
-              <h3 class="text-xl font-semibold mb-4 text-[#e49a69] title-underline animate-underline">Tursimo Activo</h3>
+              <h3 class="text-xl font-semibold mb-4 text-[#e49a69] title-underline animate-underline">Turismo Activo</h3>
               
               <div class="activity-item mb-6">
                 <h4 class="font-medium mb-2">Ferrata del Valle de Arbas</h4>
@@ -347,7 +348,7 @@ https://www.laterrazadelvalle.com/                  </a>
               
               <div class="activity-item mb-6">
                 <h4 class="font-medium mb-2">Espeleo-Barranquismo de Valporquero</h4>
-                <p class="text-sm">Reconocida como una de las actividades mejores de Tutismo Activo de España.</p>
+                <p class="text-sm">Reconocida como una de las actividades mejores de Turismo Activo de España.</p>
                 <div class="mt-2 text-xs text-gray-600">
                   <p><strong>Distancia desde Cubillas:</strong> 20km</p>
                   <p><strong>Duración aproximada:</strong> 4-5 horas</p>
@@ -371,7 +372,7 @@ https://www.laterrazadelvalle.com/                  </a>
               
               <div class="activity-item mb-6">
                 <h4 class="font-medium mb-2">Estación de Esquí y Bike-Park de Pajares</h4>
-                <p class="text-sm">Aunque en mayo no habrá nieve, puedes disfrutar de los remontes con tu bici y descener por los nuevos senderos .</p>
+                <p class="text-sm">Aunque en mayo no habrá nieve, puedes disfrutar de los remontes con tu bici y descender por los nuevos senderos .</p>
                 <div class="mt-2 text-xs text-gray-600">
                   <p><strong>Distancia desde Cubillas:</strong> 20km</p>
                   <p><strong>Duración aproximada:</strong> Medio día</p>
@@ -388,7 +389,7 @@ https://www.laterrazadelvalle.com/                  </a>
               
               <div class="activity-item">
                 <h4 class="font-medium mb-2">Kayak por el Pantano de Casares de Arbas</h4>
-                <p class="text-sm">Puedes alquolar kyaks en el Albergue del Valle de Arbas.</p>
+                <p class="text-sm">Puedes alquilar kayaks en el Albergue del Valle de Arbas.</p>
                 <div class="mt-2 text-xs text-gray-600">
                   <p><strong>Distancia desde Cubillas:</strong> 1km</p>
                 </div>
